FIXED: extra space

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -149,7 +149,7 @@ p {
 }
 
 .review_item {
-  height: 200px;
+  height: 220px;
   width: 347px !important;
   border: 1px solid #e4e4e4;
   border-radius: 10px;
